--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="nav-wrapper transparent">
             <div class="container">
-                <a href="" class="brand-logo">Alicia Scott Portfolio</a>
+                <a href="" class="brand-logo">Alicia Scott</a>
                 <a href="#" class="sidenav-trigger" data-target="side-menu">
                     <i class="material-icons">menu</i>
                 </a>
@@ -40,8 +40,39 @@
             </ul>
         </nav>
     </header>
-    <div class="container">
-      
+    <br>
+    <br>
+    <!-- Projects -->
+    <div class="container section" id="project-section">
+        <h3 id="work" class="section-title">Work</h3>
+        <div class="row">
+            <div class="carousel">
+                <a href="" class="carousel-item">
+                    <img src="./assets/images/stitches.png" class="project-image" alt="Stitches and Tape">
+                    <h5 class="project-title">Stitches & Tape</h5>
+                </a>
+                <a href="" class="carousel-item">
+                    <img src="./assets/images/kffl.png" class="project-image" alt="Kids Fantasy Football League">
+                    <h5 class="project-title">Kids Fantasy Football League</h5>
+                </a>
+                <a href="" class="carousel-item">
+                    <img src="./assets/images/train.jpg" class="project-image" alt="Train Time">
+                    <h5 class="project-title">Train Time</h5>
+                </a>
+                <a href="" class="carousel-item">
+                    <img src="./assets/images/liribot.png" class="project-image" alt="Liribot">
+                    <h5 class="project-title">Liri Bot</h5>
+                </a>
+                <a href="" class="carousel-item">
+                    <img src="./assets/images/hangman.png" class="project-image" alt="Hangman">
+                    <h5 class="project-title">Hangman</h5>
+                </a>
+                <a href="" class="carousel-item">
+                    <img src="./assets/images/crystal2.png" class="project-image" alt="Crystals Collector">
+                    <h5 class="project-title">Crystals Collector</h5>
+                </a>
+            </div>
+        </div>
     </div>
 
     <!-- Add jQuery -->
