add links to projects

--- a/index.html
+++ b/index.html
@@ -23,56 +23,87 @@
                     <i class="material-icons">menu</i>
                 </a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#bio-section">About</a></li>
+                    <li><a href="#services-section">Services</a></li>
+                    <li><a href="#project-section">Work</a></li>
+                    <li><a href="#contact-section">Contact</a></li>
                 </ul>
             </div>
 
              <!-- side nav menu for smaller screens -->
              <ul class="sidenav" id="side-menu">
                 <img src="./assets/images/green.png" id="side-image" class="center" alt="Alicia Scott">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#bio-section">About</a></li>
+                <li><a href="#services-section">Services</a></li>
+                <li><a href="#project-section">Work</a></li>
+                <li><a href="#contact-section">Contact</a></li>
             </ul>
         </nav>
     </header>
     <br>
     <br>
+     <!-- Bio -->
+     <div class="container section" id="bio-section">
+        <h3 id="bio" class="section-title">About Me</h3>
+     </div>
+    <br>
+    <br>
+    <!-- Services -->
+    <div class="container section" id="services-section">
+        <h3 id="services" class="section-title">Services Offered</h3>
+    </div>
+    <br>
+    <br>
     <!-- Projects -->
-    <div class="container section" id="project-section">
-        <h3 id="work" class="section-title">Work</h3>
-        <div class="row">
-            <div class="carousel">
-                <a href="" class="carousel-item">
-                    <img src="./assets/images/stitches.png" class="project-image" alt="Stitches and Tape">
-                    <h5 class="project-title">Stitches & Tape</h5>
-                </a>
-                <a href="" class="carousel-item">
-                    <img src="./assets/images/kffl.png" class="project-image" alt="Kids Fantasy Football League">
-                    <h5 class="project-title">Kids Fantasy Football League</h5>
-                </a>
-                <a href="" class="carousel-item">
-                    <img src="./assets/images/train.jpg" class="project-image" alt="Train Time">
-                    <h5 class="project-title">Train Time</h5>
-                </a>
-                <a href="" class="carousel-item">
-                    <img src="./assets/images/liribot.png" class="project-image" alt="Liribot">
-                    <h5 class="project-title">Liri Bot</h5>
-                </a>
-                <a href="" class="carousel-item">
-                    <img src="./assets/images/hangman.png" class="project-image" alt="Hangman">
-                    <h5 class="project-title">Hangman</h5>
-                </a>
-                <a href="" class="carousel-item">
-                    <img src="./assets/images/crystal2.png" class="project-image" alt="Crystals Collector">
-                    <h5 class="project-title">Crystals Collector</h5>
-                </a>
+    <div class="project-wrapper">
+        <div class="container section" id="project-section">
+            <h3 id="work" class="section-title">Work</h3>
+            <div class="row">
+                <div class="carousel">
+                    <div class="carousel-item">
+                        <a href="http://stitchesandtape.com/"><img src="./assets/images/stitches.png" class="project-image" alt="Stitches and Tape"></a>
+                        <h5 class="project-title center">Stitches & Tape
+                            <a href="https://github.com/SirHexxus/x-caliber"><i class="fab fa-github white-text center"></i></a>
+                        </h5>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://avscott562.github.io/KFL/"><img src="./assets/images/kffl.png" class="project-image" alt="Kids Fantasy Football League"></a>
+                        <h5 class="project-title center">Kids Fantasy Football League
+                            <a href="https://github.com/avscott562/KFL"><i class="fab fa-github white-text center"></i></a>
+                        </h5>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://avscott562.github.io/TrainTime/"><img src="./assets/images/train.jpg" class="project-image" alt="Train Time"></a>
+                        <h5 class="project-title center">Train Time
+                            <a href="https://github.com/avscott562/TrainTime"><i class="fab fa-github white-text center"></i></a>
+                        </h5>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/liribot.png" class="project-image" alt="Liribot">
+                        <h5 class="project-title center">Liri Bot
+                            <a href="https://github.com/avscott562/liri-node-app"><i class="fab fa-github white-text center"></i></a>
+                        </h5>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://avscott562.github.io/Word-Guess-Game/"><img src="./assets/images/hangman.png" class="project-image" alt="Hangman"></a>
+                        <h5 class="project-title center">Hangman
+                            <a href="https://github.com/avscott562/Word-Guess-Game"><i class="fab fa-github white-text center"></i></a>
+                        </h5>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://avscott562.github.io/unit-4-game/"><img src="./assets/images/crystal2.png" class="project-image" alt="Crystals Collector"></a>
+                        <h5 class="project-title center">Crystals Collector
+                            <a href="https://github.com/avscott562/unit-4-game"><i class="fab fa-github white-text center"></i></a>
+                        </h5>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="container section" id="contact-section">
+        <h3 id="contact" class="section-title">Contact Me</h3>
     </div>
 
     <!-- Add jQuery -->
