--- a/index.html
+++ b/index.html
@@ -40,20 +40,23 @@
             </ul>
         </nav>
     </header>
-    <br>
-    <br>
+
      <!-- Bio -->
      <div class="container section" id="bio-section">
         <h3 id="bio" class="section-title">About Me</h3>
      </div>
-    <br>
-    <br>
+
+     <div class="parallax-container">
+         <div class="parallax">
+             <img src="./assets/images/blacksand.jpeg" alt="hand holding black sand">
+         </div>
+     </div>
+
     <!-- Services -->
     <div class="container section" id="services-section">
         <h3 id="services" class="section-title">Services Offered</h3>
     </div>
-    <br>
-    <br>
+ 
     <!-- Projects -->
     <div class="project-wrapper">
         <div class="container section" id="project-section">
@@ -101,9 +104,22 @@
         </div>
     </div>
 
+    <div class="parallax-container">
+            <div class="parallax">
+                <img src="./assets/images/overlookocean.jpeg" alt="oceanview from mountain">
+            </div>
+        </div>
+
     <!-- Contact Info -->
     <div class="container section" id="contact-section">
         <h3 id="contact" class="section-title">Contact Me</h3>
+
+        <div class="row">
+            <div class="col s12 m6 l4"></div>
+            <div class="col s12 m6 l4"></div>
+            <div class="col s12 m6 l4"></div>
+        </div>
+
     </div>
 
     <!-- Add jQuery -->
