add bio and header info

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -32,18 +33,37 @@
 
              <!-- side nav menu for smaller screens -->
              <ul class="sidenav" id="side-menu">
-                <img src="./assets/images/green.png" id="side-image" class="center" alt="Alicia Scott">
+                <img src="./assets/images/peach.png" id="side-image" class="center" alt="Alicia Scott">
                 <li><a href="#bio-section">About</a></li>
                 <li><a href="#services-section">Services</a></li>
                 <li><a href="#project-section">Work</a></li>
                 <li><a href="#contact-section">Contact</a></li>
             </ul>
         </nav>
+
+        <div class="valign-wrapper">
+            <h1 class="header-title">Hi!  Alicia Scott here.  Welcome to my portfolio!
+                <br><br>  I am 
+                <span
+                    class="txt-rotate"
+                    data-period="2000"
+                    data-rotate='[ "a Full Stack Web Developer.", "a Web Designer.", "an Innovator.", "excited to work with you!" ]'></span>
+            </h1>
+        </div>
     </header>
 
      <!-- Bio -->
      <div class="container section" id="bio-section">
         <h3 id="bio" class="section-title">About Me</h3>
+        <div class="row">
+            <div class="col s12 m6">
+                <p><strong>Hi I'm Alicia Scott</strong> I was introduced to computers at a young age.  I didn't realize how impactful that would be but they've been a constant presence in my life.  I took some computer programming and repair courses right out of high school but ultimately earned a Bachelor's degree in Information Systems.  I've worked in the Engineering field doing consulting and designs ever since. </p>
+                <p>I recently rediscovered my passion for computer programming.  I've become a Full Stack Web Developer as a result.  It's new and fresh.  I'm enthusiastic and eager to tackle new assignments and bring fresh, new ideas to my clients' projects.</p>
+            </div>
+            <div class="col s12 m6">
+                <img src="./assets/images/green.png" class="bio-image right" alt="Alicia Scott">
+            </div>
+        </div>
      </div>
 
      <div class="parallax-container">
