--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Baskervville&display=swap" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -47,7 +48,7 @@
                 <span
                     class="txt-rotate"
                     data-period="2000"
-                    data-rotate='[ "a Full Stack Web Developer.", "a Web Designer.", "an Innovator.", "excited to work with you!" ]'></span>
+                    data-rotate='[ "a Full Stack Web Developer.", "a Web Designer.", "a Web Consultant", "an Innovator.", "excited to work with you!" ]'></span>
             </h1>
         </div>
     </header>
@@ -75,6 +76,46 @@
     <!-- Services -->
     <div class="container section" id="services-section">
         <h3 id="services" class="section-title">Services Offered</h3>
+
+        <div class="row service-offering">
+            <div class="col s12 l4">
+                <i class="large material-icons">highlight</i>
+            </div>
+            <div class="col s12 l6">
+                <h4>Innovative Ideas</h4>
+               <p class="service-description">Bringing fresh, new ideas to your projects.</p>
+            </div>
+        </div>
+
+        <div class="row service-offering">
+            <div class="col s12 l4">
+                <i class="large material-icons">sd_storage</i>
+            </div>
+            <div class="col s12 l6">
+                <h4>Back-End Web Development</h4>
+                <p class="service-description">Adding dynamic functionality to your project.</p>
+            </div>
+        </div>
+
+        <div class="row service-offering">
+            <div class="col s12 l4">
+                <i class="large material-icons">phonelink_ring</i>
+            </div>
+            <div class="col s12 l6">
+                <h4>Front-End Web Development</h4>
+                <p class="service-description">Beautiful displays and user interfaces.</p>
+            </div>
+        </div>
+
+        <div class="row service-offering">
+            <div class="col s12 l4">
+                <i class="large material-icons">widgets</i>
+            </div>
+            <div class="col s12 l6">
+                <h4>Web Consulting</h4>
+                <p class="service-description">Generating ideas to drive traffic to your site.</p>
+            </div>
+        </div>
     </div>
  
     <!-- Projects -->
