--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p><strong>Hi I'm Alicia Scott</strong> I was introduced to computers at a young age.  I didn't realize how impactful that would be but they've been a constant presence in my life.  I took some computer programming and repair courses right out of high school but ultimately earned a Bachelor's degree in Information Systems.  I've worked in the Engineering field doing consulting and designs ever since. </p>
                 <p>I recently rediscovered my passion for computer programming.  I've become a Full Stack Web Developer as a result.  It's new and fresh.  I'm enthusiastic and eager to tackle new assignments and bring fresh, new ideas to my clients' projects.</p>
             </div>
-            <div class="col s12 m6">
+            <div class="col s12 m5 offset-m1">
                 <img src="./assets/images/green.png" class="bio-image right" alt="Alicia Scott">
             </div>
         </div>
@@ -78,40 +78,40 @@
         <h3 id="services" class="section-title">Services Offered</h3>
 
         <div class="row service-offering">
-            <div class="col s12 l4">
-                <i class="large material-icons">highlight</i>
+            <div class="col s12 l3">
+                <i class="large material-icons yellow-text text-darken-2">highlight</i>
             </div>
-            <div class="col s12 l6">
+            <div class="col s12 l6 offset-l2">
                 <h4>Innovative Ideas</h4>
                <p class="service-description">Bringing fresh, new ideas to your projects.</p>
             </div>
         </div>
 
         <div class="row service-offering">
-            <div class="col s12 l4">
-                <i class="large material-icons">sd_storage</i>
+            <div class="col s12 l3 push-l7 offset-l2">
+                <i class="large material-icons blue-text text-darken-4">sd_storage</i>
             </div>
-            <div class="col s12 l6">
+            <div class="col s12 l6 pull-l5 right-align offset-l1">
                 <h4>Back-End Web Development</h4>
                 <p class="service-description">Adding dynamic functionality to your project.</p>
             </div>
         </div>
 
         <div class="row service-offering">
-            <div class="col s12 l4">
-                <i class="large material-icons">phonelink_ring</i>
+            <div class="col s12 l3">
+                <i class="large material-icons purple-text text-darken-3">phonelink_ring</i>
             </div>
-            <div class="col s12 l6">
+            <div class="col s12 l6 offset-l2">
                 <h4>Front-End Web Development</h4>
                 <p class="service-description">Beautiful displays and user interfaces.</p>
             </div>
         </div>
 
         <div class="row service-offering">
-            <div class="col s12 l4">
-                <i class="large material-icons">widgets</i>
+            <div class="col s12 l3 push-l7 offset-l2">
+                <i class="large material-icons green-text text-darken-4">widgets</i>
             </div>
-            <div class="col s12 l6">
+            <div class="col s12 l6 pull-l5 right-align offset-l1">
                 <h4>Web Consulting</h4>
                 <p class="service-description">Generating ideas to drive traffic to your site.</p>
             </div>
