--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Baskervville&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -48,16 +49,16 @@
             <br>
             <p class="animated zoomIn delay-2s">Welcome!</p>
             <br>
-            <p class="animated fadeInUpBig delay-3s slow">I am 
+            <p class="animated fadeInUp delay-3s slow">I am 
                     <span
                         class="txt-rotate"
                         data-period="2000"
-                        data-rotate='[ "a Full Stack Web Developer.", "a Web Designer.", "a Web Consultant", "an Innovator.", "excited to work with you!" ]'></span></p>
+                        data-rotate='[ "a Full Stack Web Developer.", "a Web Designer.", "a Web Consultant.", "an Innovator.", "excited to work with you!" ]'></span></p>
         </div>
     </header>
 
      <!-- Bio -->
-     <div class="container section" id="bio-section">
+     <div class="container section" data-aos="zoom-in-up" data-aos-duration="2000"  id="bio-section">
         <h3 id="bio" class="section-title">About Me</h3>
         <div class="row">
             <div class="col s12 m6">
@@ -77,7 +78,7 @@
      </div>
 
     <!-- Services -->
-    <div class="container section" id="services-section">
+    <div class="container section" data-aos="zoom-in-up" data-aos-duration="2000"  id="services-section">
         <h3 id="services" class="section-title">Services Offered</h3>
 
         <div class="row service-offering">
@@ -175,7 +176,7 @@
         </div>
 
     <!-- Contact Info -->
-    <div class="container section" id="contact-section">
+    <div class="container section" data-aos="zoom-in-up" data-aos-duration="2000"  id="contact-section">
         <h3 id="contact" class="section-title">Contact Me</h3>
 
         <div class="row">
@@ -234,6 +235,7 @@
     <!-- Add jQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Scrollmagic -->
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script> -->
