add scroll arrow and adjust color

--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
 
         <div class="center-align head-wrapper">
             <h1 class="header-title animated bounceInRight slow">Hi!  Alicia Scott here.</h1>
-            <br>
             <p class="animated zoomIn delay-2s">Welcome!</p>
-            <br>
             <p class="animated fadeInUp delay-3s slow">I am 
                     <span
                         class="txt-rotate"
                         data-period="2000"
                         data-rotate='[ "a Full Stack Web Developer.", "a Web Designer.", "a Web Consultant.", "an Innovator.", "excited to work with you!" ]'></span></p>
+            <div class="arrow animated fadeIn">
+                <i class="medium material-icons">keyboard_arrow_down</i>
+            </div>
         </div>
     </header>
 
@@ -81,41 +82,41 @@
     <div class="container section" data-aos="zoom-in-up" data-aos-duration="2000"  id="services-section">
         <h3 id="services" class="section-title">Services Offered</h3>
 
-        <div class="row service-offering">
-            <div class="col s12 l3">
+        <div class="row service-offering animated fadeInRight slow delay-2s">
+            <div class="col s12 l2">
                 <i class="large material-icons yellow-text text-darken-2">highlight</i>
             </div>
-            <div class="col s12 l6 offset-l2">
+            <div class="col s12 l7">
                 <h4>Innovative Ideas</h4>
                <p class="service-description">Bringing fresh, new ideas to your projects.</p>
             </div>
         </div>
 
-        <div class="row service-offering">
-            <div class="col s12 l3 push-l7 offset-l2">
-                <i class="large material-icons blue-text text-darken-4">sd_storage</i>
+        <div class="row service-offering animated fadeInLeft slow delay-3s">
+            <div class="col s12 l2 push-l7 offset-l2">
+                <i class="large fas fa-database blue-text text-darken-4"></i>
             </div>
-            <div class="col s12 l6 pull-l5 right-align offset-l1">
+            <div class="col s12 l7 pull-l3 right-align offset-l1">
                 <h4>Back-End Web Development</h4>
                 <p class="service-description">Adding dynamic functionality to your project.</p>
             </div>
         </div>
 
-        <div class="row service-offering">
-            <div class="col s12 l3">
-                <i class="large material-icons purple-text text-darken-3">phonelink_ring</i>
+        <div class="row service-offering animated fadeInRight slow delay-4s">
+            <div class="col s12 l2">
+                <i class="large fas fa-tablet-alt purple-text text-darken-3"></i>
             </div>
-            <div class="col s12 l6 offset-l2">
+            <div class="col s12 l7">
                 <h4>Front-End Web Development</h4>
                 <p class="service-description">Beautiful displays and user interfaces.</p>
             </div>
         </div>
 
-        <div class="row service-offering">
-            <div class="col s12 l3 push-l7 offset-l2">
+        <div class="row service-offering animated fadeInLeft slow delay-5s">
+            <div class="col s12 l2 push-l7 offset-l2">
                 <i class="large material-icons green-text text-darken-4">widgets</i>
             </div>
-            <div class="col s12 l6 pull-l5 right-align offset-l1">
+            <div class="col s12 l7 pull-l3 right-align offset-l1">
                 <h4>Web Consulting</h4>
                 <p class="service-description">Generating ideas to drive traffic to your site.</p>
             </div>
@@ -129,39 +130,39 @@
             <div class="row">
                 <div class="carousel">
                     <div class="carousel-item">
-                        <a href="http://stitchesandtape.com/"><img src="./assets/images/stitches.png" class="project-image" alt="Stitches and Tape"></a>
+                        <a href="http://stitchesandtape.com/" target="_blank"><img src="./assets/images/stitches.png" class="project-image" alt="Stitches and Tape"></a>
                         <h5 class="project-title center">Stitches & Tape
-                            <a href="https://github.com/SirHexxus/x-caliber"><i class="fab fa-github white-text center"></i></a>
+                            <a href="https://github.com/SirHexxus/x-caliber" target="_blank"><i class="fab fa-github white-text center"></i></a>
                         </h5>
                     </div>
                     <div class="carousel-item">
-                        <a href="https://avscott562.github.io/KFL/"><img src="./assets/images/kffl.png" class="project-image" alt="Kids Fantasy Football League"></a>
+                        <a href="https://avscott562.github.io/KFL/" target="_blank"><img src="./assets/images/kffl.png" class="project-image" alt="Kids Fantasy Football League"></a>
                         <h5 class="project-title center">Kids Fantasy Football League
-                            <a href="https://github.com/avscott562/KFL"><i class="fab fa-github white-text center"></i></a>
+                            <a href="https://github.com/avscott562/KFL" target="_blank"><i class="fab fa-github white-text center"></i></a>
                         </h5>
                     </div>
                     <div class="carousel-item">
-                        <a href="https://avscott562.github.io/TrainTime/"><img src="./assets/images/train.jpg" class="project-image" alt="Train Time"></a>
+                        <a href="https://avscott562.github.io/TrainTime/" target="_blank"><img src="./assets/images/train.jpg" class="project-image" alt="Train Time"></a>
                         <h5 class="project-title center">Train Time
-                            <a href="https://github.com/avscott562/TrainTime"><i class="fab fa-github white-text center"></i></a>
+                            <a href="https://github.com/avscott562/TrainTime" target="_blank"><i class="fab fa-github white-text center"></i></a>
                         </h5>
                     </div>
                     <div class="carousel-item">
                         <img src="./assets/images/liribot.png" class="project-image" alt="Liribot">
                         <h5 class="project-title center">Liri Bot
-                            <a href="https://github.com/avscott562/liri-node-app"><i class="fab fa-github white-text center"></i></a>
+                            <a href="https://github.com/avscott562/liri-node-app" target="_blank"><i class="fab fa-github white-text center"></i></a>
                         </h5>
                     </div>
                     <div class="carousel-item">
-                        <a href="https://avscott562.github.io/Word-Guess-Game/"><img src="./assets/images/hangman.png" class="project-image" alt="Hangman"></a>
+                        <a href="https://avscott562.github.io/Word-Guess-Game/" target="_blank"><img src="./assets/images/hangman.png" class="project-image" alt="Hangman"></a>
                         <h5 class="project-title center">Hangman
-                            <a href="https://github.com/avscott562/Word-Guess-Game"><i class="fab fa-github white-text center"></i></a>
+                            <a href="https://github.com/avscott562/Word-Guess-Game" target="_blank"><i class="fab fa-github white-text center"></i></a>
                         </h5>
                     </div>
                     <div class="carousel-item">
-                        <a href="https://avscott562.github.io/unit-4-game/"><img src="./assets/images/crystal2.png" class="project-image" alt="Crystals Collector"></a>
+                        <a href="https://avscott562.github.io/unit-4-game/" target="_blank"><img src="./assets/images/crystal2.png" class="project-image" alt="Crystals Collector"></a>
                         <h5 class="project-title center">Crystals Collector
-                            <a href="https://github.com/avscott562/unit-4-game"><i class="fab fa-github white-text center"></i></a>
+                            <a href="https://github.com/avscott562/unit-4-game" target="_blank"><i class="fab fa-github white-text center"></i></a>
                         </h5>
                     </div>
                 </div>
